package pattern_examples.decorator_pattern_example;

public interface PrinterInterface {
    void print();
}
