@startuml

title __DECORATOR_PATTERN_EXAMPLE's Class Diagram__\n

  namespace pattern_examples.decorator_pattern_example {
    abstract class pattern_examples.decorator_pattern_example.Decorator {
        + Decorator()
        + print()
    }
  }
  

  namespace pattern_examples.decorator_pattern_example {
    class pattern_examples.decorator_pattern_example.LeftBracketDecorator {
        + LeftBracketDecorator()
        + print()
    }
  }
  

  namespace pattern_examples.decorator_pattern_example {
    class pattern_examples.decorator_pattern_example.Main {
        {static} + main()
    }
  }
  

  namespace pattern_examples.decorator_pattern_example {
    class pattern_examples.decorator_pattern_example.Printer {
        - name : String
        + Printer()
        + print()
    }
  }
  

  namespace pattern_examples.decorator_pattern_example {
    interface pattern_examples.decorator_pattern_example.PrinterInterface {
        {abstract} + print()
    }
  }
  

  namespace pattern_examples.decorator_pattern_example {
    class pattern_examples.decorator_pattern_example.QuotesDecorator {
        + QuotesDecorator()
        + print()
    }
  }
  

  namespace pattern_examples.decorator_pattern_example {
    class pattern_examples.decorator_pattern_example.RightBracketDecorator {
        + RightBracketDecorator()
        + print()
    }
  }
  

  pattern_examples.decorator_pattern_example.Decorator .up.|> pattern_examples.decorator_pattern_example.PrinterInterface
  pattern_examples.decorator_pattern_example.Decorator o-- pattern_examples.decorator_pattern_example.PrinterInterface : component
  pattern_examples.decorator_pattern_example.LeftBracketDecorator -up-|> pattern_examples.decorator_pattern_example.Decorator
  pattern_examples.decorator_pattern_example.Printer .up.|> pattern_examples.decorator_pattern_example.PrinterInterface
  pattern_examples.decorator_pattern_example.QuotesDecorator -up-|> pattern_examples.decorator_pattern_example.Decorator
  pattern_examples.decorator_pattern_example.RightBracketDecorator -up-|> pattern_examples.decorator_pattern_example.Decorator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
